--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>assignment</title>
   </head>
-  <body>
+  <body style="background-color: #F7F7F7;">
     <noscript>
       <strong>We're sorry but assignment doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
